# STRESS

./: .gitignore  CONTRIBUTING.md  STRESS_FRAMEWORK_RESEARCH.md  STRESS_v0_Implementation_Guide.md  pyproject.toml  readme.md
docs/: STRESS_v0_Complete_Specification.md  STRESS_v0_Reference_Stress_Profiles.md  STRESS_v0_Reference_Workloads.md  glossary.md
examples/: README.md  run_w1a_sp1.py  run_w3a_sp1.py
report_demo/: aggregate_summary.json  disclosure.md  manifest.json
report_demo/runs/: run_01.json
report_full/: aggregate_summary.json  manifest.json
report_full/runs/: run_01.json  run_02.json  run_03.json  run_04.json  run_05.json  run_06.json  run_07.json  run_08.json  run_09.json  run_10.json
report_w1a_real/: aggregate_summary.json  disclosure.md  manifest.json
report_w1a_real/runs/: run_01.json  run_02.json  run_03.json  run_04.json  run_05.json  run_06.json  run_07.json  run_08.json  run_09.json  run_10.json
report_w2a/: aggregate_summary.json  manifest.json
report_w2a/runs/: run_01.json  (+9 more)
stress/: README.md  config.py  runner.py
stress-ref/: Cargo.toml
stress-ref/src/: lib.rs  runner.rs
stress-ref/src/metrics/: arr.rs  cfr.rs  gds.rs  ist.rs  mod.rs  rec.rs  sri.rs
stress-ref/src/report/: mod.rs
stress-ref/src/stats/: mod.rs
stress-ref/src/stress/: isolation.rs  mod.rs  network.rs  power.rs  profiles.rs  radiation.rs  regime.rs  thermal.rs
stress-ref/src/types/: config.rs  events.rs  mod.rs  report.rs
stress-ref/src/workloads/: mod.rs  w1_stateless.rs  w2_stateful.rs  w3_distributed.rs
tests/: README.md  test_smoke.py
(+30 files in other folders)
