[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stress-benchmark"
version = "0.2.0"
description = "STRESS — System Threat Resilience & Extreme Stress Suite"
readme = "readme.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["stress*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
