[package]
name = "stress-ref"
version = "0.2.0"
edition = "2021"
description = "STRESS — System Threat Resilience & Extreme Stress Suite reference implementation"
license = "Apache-2.0"

[[bin]]
name = "stress"
path = "src/bin/stress.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
